# patent-space-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  smithery.yaml
db/: migrations.py  sqlite_store.py
entity/: registry.py  resolver.py
normalize/: applicant.py  schema.py
scripts/: analyze_db_size.py  build_citation_index.py  build_single_cluster.py  build_tech_clusters.py  build_tech_clusters.py.bak_20260225_232729  compute_family_sizes.py  compute_firm_tech_vectors.py  compute_patent_value.py.bak_20260225_232729  compute_startability_surface.py.bak_20260225_232729  compute_startability_surface.py.bak_20260225_233440  compute_startability_surface.py.bak_20260225_233526  deploy_remote.sh  derive_legal_status.py  entity_resolution_global.py  export_paper_data.py  extract_gdelt_500.py  extract_gdelt_fast.py  extract_gdelt_features.py  generate_entities_from_csv.py  generate_paper_data.py  generate_product_guide.py  ingest_citations.py  ingest_embeddings.py  ingest_etsi_sep.py  ingest_global_patents.py  ingest_litigation_parquet.py  ingest_parquet_patents.py  ingest_ptab.py  ingest_research_parquet.py  link_firm_ids.py  measure_quality.py  overnight_pipeline.sh  post_download.sh  post_ingestion_analysis.py  run_2000_tests.py  seed_corporate_hierarchy.py  seed_sep_data.py  test_bigquery.py  watch_download.sh
sources/: base.py  bigquery.py  epo_ops.py  gdelt_bigquery.py
space/: __init__.py  embedding_bridge.py  startability.py
tests/: conftest.py  (+10 more)
(+45 files in other folders)
